Merge changes to poms and code from maven2 branch